--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -203,17 +203,6 @@ jobs:
       run:
         working-directory: ${{ env.WORKING_DIRECTORY }}
     
-    services:
-      redis:
-        image: redis:7-alpine
-        ports:
-          - 6379:6379
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -241,10 +230,18 @@ jobs:
           go mod download
           go mod verify
 
-      - name: Wait for Redis
+      - name: Install and start Redis
         run: |
-          echo "⏳ Waiting for Redis to be ready..."
-          timeout 30s bash -c 'until redis-cli -h localhost -p 6379 ping; do sleep 1; done'
+          echo "🔧 Installing and starting Redis..."
+          # Install Redis
+          sudo apt-get update
+          sudo apt-get install -y redis-server
+          
+          # Start Redis service
+          sudo systemctl start redis-server
+          
+          # Wait for Redis to be ready
+          timeout 30s bash -c 'until redis-cli ping; do sleep 1; done'
           echo "✅ Redis is ready!"
 
       - name: Run unit tests
