--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -343,13 +343,17 @@ jobs:
           echo "🔧 Setting up test environment..."
           echo "Environment variables will be provided via GitHub Actions env"
 
-      - name: Test Redis connection
+      - name: Test Redis connection (if available)
         run: |
-          echo "🧪 Testing Redis connection for integration tests..."
-          redis-cli -h localhost -p 6379 set test_key "test_value"
-          redis-cli -h localhost -p 6379 get test_key
-          redis-cli -h localhost -p 6379 del test_key
-          echo "✅ Redis connection test successful"
+          if [ "$REDIS_AVAILABLE" = "true" ]; then
+            echo "🧪 Testing Redis connection for integration tests..."
+            redis-cli -h localhost -p 6379 set test_key "test_value"
+            redis-cli -h localhost -p 6379 get test_key
+            redis-cli -h localhost -p 6379 del test_key
+            echo "✅ Redis connection test successful"
+          else
+            echo "⚠️ Skipping Redis connection test - Redis not available"
+          fi
 
       - name: Run database migrations
         run: |
@@ -591,13 +595,17 @@ jobs:
           go mod download
           go mod verify
 
-      - name: Test Redis connection
+      - name: Test Redis connection (if available)
         run: |
-          echo "🧪 Testing Redis connection for performance tests..."
-          redis-cli -h localhost -p 6379 set test_key "test_value"
-          redis-cli -h localhost -p 6379 get test_key
-          redis-cli -h localhost -p 6379 del test_key
-          echo "✅ Redis connection test successful"
+          if [ "$REDIS_AVAILABLE" = "true" ]; then
+            echo "🧪 Testing Redis connection for performance tests..."
+            redis-cli -h localhost -p 6379 set test_key "test_value"
+            redis-cli -h localhost -p 6379 get test_key
+            redis-cli -h localhost -p 6379 del test_key
+            echo "✅ Redis connection test successful"
+          else
+            echo "⚠️ Skipping Redis connection test - Redis not available"
+          fi
 
       - name: Run cache performance tests
         run: |
