feat: enhance backend configuration and Redis integration
- Updated environment configuration files to include detailed sections for Supabase, database, server, and Redis settings.
- Added support for optional Redis TLS configuration in the Redis client.
- Implemented Redis health checks in the health and readiness handlers to monitor Redis status alongside other services.
- Improved test environment configuration with specific Redis settings for local and cloud testing scenarios.

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,16 +1,72 @@
-# Supabase Configuration
-SUPABASE_URL=your_supabase_project_url
+# ===========================================
+# SPARK PARK CRICKET BACKEND CONFIGURATION
+# ===========================================
+# Copy this file to .env and fill in your actual values
+
+# ===========================================
+# SUPABASE CONFIGURATION
+# ===========================================
+SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_API_KEY=your_supabase_anon_key
+SUPABASE_PUBLISHABLE_KEY=your_supabase_publishable_key
+SUPABASE_SECRET_KEY=your_supabase_secret_key
 
-# Database Configuration (for migrations)
-DATABASE_PASSWORD=your_database_password
+# ===========================================
+# DATABASE CONFIGURATION
+# ===========================================
 DATABASE_SCHEMA=prod_v1
+DATABASE_PASSWORD=your_database_password
+DATABASE_URL=postgresql://postgres:password@localhost:5432/postgres
 
-# Server Configuration
+# ===========================================
+# SERVER CONFIGURATION
+# ===========================================
 PORT=8080
 
-# Redis Cache Configuration
+# ===========================================
+# REDIS CACHE CONFIGURATION
+# ===========================================
+# Choose one of the Redis configurations below:
+
+# LOCAL DEVELOPMENT (Redis without TLS)
 REDIS_URL=localhost:6379
 REDIS_PASSWORD=
 REDIS_DB=0
+REDIS_USE_TLS=false
 CACHE_ENABLED=true
+
+# PRODUCTION/UPSTASH (Redis with TLS)
+# REDIS_URL=your-upstash-redis-host:6379
+# REDIS_PASSWORD=your-upstash-redis-password
+# REDIS_DB=0
+# REDIS_USE_TLS=true
+# CACHE_ENABLED=true
+
+# REDIS CLOUD (with TLS)
+# REDIS_URL=your-redis-cloud-host:port
+# REDIS_PASSWORD=your-redis-cloud-password
+# REDIS_DB=0
+# REDIS_USE_TLS=true
+# CACHE_ENABLED=true
+
+# AWS ELASTICACHE (without TLS)
+# REDIS_URL=your-elasticache-endpoint:6379
+# REDIS_PASSWORD=your-elasticache-password
+# REDIS_DB=0
+# REDIS_USE_TLS=false
+# CACHE_ENABLED=true
+
+# ===========================================
+# TESTING CONFIGURATION
+# ===========================================
+# For running tests, you can override specific values:
+# TEST_SCHEMA=testing_db
+# TEST_TIMEOUT=30s
+# TEST_CLEANUP=true
+
+# ===========================================
+# EXAMPLE VALUES FOR REFERENCE
+# ===========================================
+# Supabase URL: https://qehkpqubnnpbaejhcwvx.supabase.co
+# Upstash Redis: picked-blowfish-5700.upstash.io:6379
+# Local Redis: localhost:6379
