--- a/backend/env.test.example
+++ b/backend/env.test.example
@@ -1,19 +1,50 @@
-# Test Environment Configuration
-# Copy this to .env and fill in your Supabase credentials
+# ===========================================
+# TEST ENVIRONMENT CONFIGURATION
+# ===========================================
+# Copy this to .env and fill in your actual values for testing
 
-# Supabase Configuration for Testing
+# ===========================================
+# SUPABASE CONFIGURATION FOR TESTING
+# ===========================================
 SUPABASE_URL=https://your-project-id.supabase.co
 SUPABASE_API_KEY=your_supabase_anon_key
+SUPABASE_PUBLISHABLE_KEY=your_supabase_publishable_key
+SUPABASE_SECRET_KEY=your_supabase_secret_key
 
-# Test Schema Configuration
-TEST_SCHEMA=testing_db
-
-# Database Configuration (for migrations)
+# ===========================================
+# DATABASE CONFIGURATION
+# ===========================================
+DATABASE_SCHEMA=testing_db
 DATABASE_PASSWORD=your_database_password
+DATABASE_URL=postgresql://postgres:password@localhost:5432/postgres
 
-# Server Configuration
+# ===========================================
+# SERVER CONFIGURATION
+# ===========================================
 PORT=8080
 
-# Test-specific settings
+# ===========================================
+# REDIS CACHE CONFIGURATION FOR TESTING
+# ===========================================
+# For testing, you can use local Redis or a test Redis instance
+
+# LOCAL TESTING (Redis without TLS)
+REDIS_URL=localhost:6379
+REDIS_PASSWORD=
+REDIS_DB=1
+REDIS_USE_TLS=false
+CACHE_ENABLED=true
+
+# TEST REDIS WITH TLS (if using cloud Redis for testing)
+# REDIS_URL=your-test-redis-host:6379
+# REDIS_PASSWORD=your-test-redis-password
+# REDIS_DB=1
+# REDIS_USE_TLS=true
+# CACHE_ENABLED=true
+
+# ===========================================
+# TEST-SPECIFIC SETTINGS
+# ===========================================
+TEST_SCHEMA=testing_db
 TEST_TIMEOUT=30s
 TEST_CLEANUP=true
