--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,7 +1,7 @@
 # Spark Park Cricket Backend - Makefile
 # This Makefile provides commands for running tests and managing the project
 
-.PHONY: help test test-unit test-integration test-e2e test-illegal test-series test-match test-scorecard test-all build run clean setup-test-db
+.PHONY: help test test-unit test-integration test-e2e test-illegal test-series test-match test-scorecard test-all build run clean setup-test-db clear-db
 
 # Default target
 help:
@@ -25,6 +25,7 @@ help:
 	@echo ""
 	@echo "Setup Commands:"
 	@echo "  setup-test-db    Instructions for setting up test database"
+	@echo "  clear-db         Clear all data from database tables (DANGEROUS!)"
 	@echo ""
 	@echo "Examples:"
 	@echo "  make test-unit"
@@ -42,6 +43,9 @@ test-integration:
 	@echo "🔗 Running Integration Tests..."
 	@echo "-------------------------------"
 	@echo "⚠️  Note: Integration tests require a running Supabase instance"
+	@echo "🧹 Cleaning database before integration tests..."
+	@echo "YES" | go run cmd/clear-db/main.go
+	@echo "✅ Database cleaned, starting integration tests..."
 	go test ./tests/integration/ -v
 
 # End-to-end tests (requires database)
@@ -49,12 +53,18 @@ test-e2e:
 	@echo "🌐 Running End-to-End Tests..."
 	@echo "------------------------------"
 	@echo "⚠️  Note: E2E tests require a running Supabase instance"
+	@echo "🧹 Cleaning database before E2E tests..."
+	@echo "YES" | go run cmd/clear-db/main.go
+	@echo "✅ Database cleaned, starting E2E tests..."
 	go test ./tests/e2e/ -v
 
 # Illegal balls tests (requires database)
 test-illegal:
 	@echo "⚾ Running Illegal Balls Tests..."
 	@echo "--------------------------------"
+	@echo "🧹 Cleaning database before illegal balls tests..."
+	@echo "YES" | go run cmd/clear-db/main.go
+	@echo "✅ Database cleaned, starting illegal balls tests..."
 	go test ./tests/integration/illegal_balls_comprehensive_test.go -v
 
 # Series-specific tests
@@ -66,6 +76,9 @@ test-series:
 	@echo ""
 	@echo "Integration tests (requires database):"
 	@echo "⚠️  Note: Integration tests require a running Supabase instance"
+	@echo "🧹 Cleaning database before series integration tests..."
+	@echo "YES" | go run cmd/clear-db/main.go
+	@echo "✅ Database cleaned, starting series integration tests..."
 	go test ./tests/integration/series_integration_test.go -v
 
 # Match-specific tests
@@ -77,10 +90,16 @@ test-match:
 	@echo ""
 	@echo "Integration tests (requires database):"
 	@echo "⚠️  Note: Integration tests require a running Supabase instance"
+	@echo "🧹 Cleaning database before match integration tests..."
+	@echo "YES" | go run cmd/clear-db/main.go
+	@echo "✅ Database cleaned, starting match integration tests..."
 	go test ./tests/integration/match_integration_test.go -v
 	@echo ""
 	@echo "E2E tests (requires database):"
 	@echo "⚠️  Note: E2E tests require a running Supabase instance"
+	@echo "🧹 Cleaning database before match E2E tests..."
+	@echo "YES" | go run cmd/clear-db/main.go
+	@echo "✅ Database cleaned, starting match E2E tests..."
 	go test ./tests/e2e/match_workflow_e2e_test.go -v
 
 # Scorecard-specific tests
@@ -92,10 +111,16 @@ test-scorecard:
 	@echo ""
 	@echo "Integration tests (requires database):"
 	@echo "⚠️  Note: Integration tests require a running Supabase instance"
+	@echo "🧹 Cleaning database before scorecard integration tests..."
+	@echo "YES" | go run cmd/clear-db/main.go
+	@echo "✅ Database cleaned, starting scorecard integration tests..."
 	go test ./tests/integration/scorecard_integration_test.go -v
 	@echo ""
 	@echo "E2E tests (requires database):"
 	@echo "⚠️  Note: E2E tests require a running Supabase instance"
+	@echo "🧹 Cleaning database before scorecard E2E tests..."
+	@echo "YES" | go run cmd/clear-db/main.go
+	@echo "✅ Database cleaned, starting scorecard E2E tests..."
 	go test ./tests/e2e/scorecard_workflow_e2e_test.go -v
 
 # Run all tests using the Go test runner
@@ -145,3 +170,13 @@ setup-test-db:
 	@echo "   TEST_SCHEMA=testing_db"
 	@echo "   SUPABASE_URL=your_supabase_url"
 	@echo "   SUPABASE_API_KEY=your_supabase_key"
+
+# Clear all database tables (DANGEROUS!)
+clear-db:
+	@echo "🗑️  Database Clear Script"
+	@echo "========================"
+	@echo "⚠️  WARNING: This will permanently delete ALL data from the database!"
+	@echo "⚠️  Make sure you have backups before proceeding!"
+	@echo ""
+	@echo "Running database clear script..."
+	go run cmd/clear-db/main.go
