--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -13,7 +13,7 @@ on:
       - 'backend/**'
       - '.github/workflows/backend-ci.yml'
   
-  # Manual trigger
+  # Manual trigger - available on all branches
   workflow_dispatch:
     inputs:
       test_type:
