--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -26,6 +26,7 @@ on:
           - unit
           - integration
           - e2e
+          - performance
       run_linter:
         description: 'Run linter checks'
         required: false
@@ -187,7 +188,7 @@ jobs:
         run: make test-integration
 
   e2e-tests:
-    name: E2E & Performance Tests
+    name: E2E Tests
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'workflow_dispatch' && inputs.run_tests == true && (inputs.test_type == 'all' || inputs.test_type == 'e2e') || github.event_name != 'workflow_dispatch' }}
     
@@ -230,7 +231,42 @@ jobs:
           TEST_CLEANUP: ${{ env.TEST_CLEANUP }}
         run: make test-e2e
 
-      - name: Run performance benchmarks
+  performance-tests:
+    name: Performance Tests
+    runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'workflow_dispatch' && inputs.run_tests == true && (inputs.test_type == 'all' || inputs.test_type == 'performance') || github.event_name != 'workflow_dispatch' }}
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+
+      - name: Cache Go modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+
+      - name: Download dependencies
+        working-directory: ${{ env.WORKING_DIRECTORY }}
+        run: go mod download
+
+      - name: Setup test environment
+        working-directory: ${{ env.WORKING_DIRECTORY }}
+        run: |
+          # Copy test environment file
+          cp env.test .env
+          echo "✅ Test environment configured"
+
+      - name: Run performance tests
         working-directory: ${{ env.WORKING_DIRECTORY }}
         env:
           TEST_SCHEMA: ${{ env.TEST_SCHEMA }}
@@ -318,7 +354,7 @@ jobs:
   summary:
     name: Workflow Summary
     runs-on: ubuntu-latest
-    needs: [lint, unit-tests, integration-tests, e2e-tests, build, security-scan]
+    needs: [lint, unit-tests, integration-tests, e2e-tests, performance-tests, build, security-scan]
     if: always()
     
     steps:
@@ -331,7 +367,8 @@ jobs:
           echo "| Lint | ${{ needs.lint.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Unit Tests | ${{ needs.unit-tests.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Integration Tests | ${{ needs.integration-tests.result }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| E2E & Performance Tests | ${{ needs.e2e-tests.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| E2E Tests | ${{ needs.e2e-tests.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Performance Tests | ${{ needs.performance-tests.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Build | ${{ needs.build.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Security Scan | ${{ needs.security-scan.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
