--- a/web/cypress/tsconfig.json
+++ b/web/cypress/tsconfig.json
@@ -1,27 +1,18 @@
 {
-    "compilerOptions": {
-        "target": "es5",
-        "lib": [
-            "es5",
-            "dom"
-        ],
-        "allowJs": true,
-        "skipLibCheck": true,
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
-        "strict": true,
-        "forceConsistentCasingInFileNames": true,
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "isolatedModules": false,
-        "noEmit": true,
-        "types": [
-            "cypress",
-            "node"
-        ]
-    },
-    "include": [
-        "**/*.ts",
-        "**/*.tsx"
-    ]
+  "compilerOptions": {
+    "target": "es5",
+    "lib": ["es5", "dom"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": false,
+    "noEmit": true,
+    "types": ["cypress", "node"]
+  },
+  "include": ["**/*.ts", "**/*.tsx"]
 }
