chore: update default deployment environment in backend CI workflow
- Changed the default deployment environment from 'test' to 'dev' in the backend CI workflow configuration.
- Updated options to reflect the new default, enhancing clarity for deployment choices.

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -42,10 +42,10 @@ on:
       environment:
         description: 'Environment to deploy to (if applicable)'
         required: false
-        default: 'test'
+        default: 'dev'
         type: choice
         options:
-          - test
+          - dev
           - staging
           - production
 
